fix(webapp/toolbar): nowrap text

--- a/apps/webapp/src/components/toolbar.module.css
+++ b/apps/webapp/src/components/toolbar.module.css
@@ -21,6 +21,7 @@
   background-color: #7b520022;
   padding: 0;
   padding-right: 4px;
+  white-space: nowrap;
 }
 
 .item:hover {
